--- a/app/views/gigs/show.html.erb
+++ b/app/views/gigs/show.html.erb
@@ -1,27 +1,6 @@
-<!--<h2>Gig Info</h2>
-
-<p>
-  <strong>Artist:</strong>
-  <%= @gig.name %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @gig.description %>
-</p>
-
-<p>
-  <strong>Location:</strong>
-  <%= @gig.location %>
-</p>
-
-<p>
-  <strong>Date:</strong>
-  <%= @gig.time %>
-</p>
--->
-<div class="container p-3">
-<div class="confirm-card">
+<div class="justify-content-center d-flex">
+<div class="container p-3 row justify-content-center mx-0">
+<div class="confirm-card col-12 col-lg-6">
   <img src="<%= @gig.band_image_url %>" alt="Event Image">
   <div class="confirm-card-content">
     <div class="confirm-card-title">
@@ -37,11 +16,11 @@
       <%= @gig.time.strftime("%a, %b %e %Y") %><br>
       <%= @gig.time.strftime("%I:%M %P") %>
     </div>
+    <div class="register-button">
+        <%= simple_form_for [@gig, @registration] do |f| %>
+          <%= f.submit "Register", style: 'background-color:#8A68CE; color: white; padding: 10px 10px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; border: none; border-radius: 4px;' %>
+        <% end %>
+    </div>
   </div>
 </div>
-
-<%= simple_form_for [@gig, @registration] do |f| %>
-  <%= f.submit "Register", style: 'background-color: purple; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; border: none; border-radius: 4px;' %>
-<% end %>
-
 </div>
