--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -4,7 +4,7 @@
   background-size: cover;
   background-position: center;
   height: 180px;
-  width: 180px;
+  min-width: 180px;
   display: flex;
   justify-content: center;
   align-items: center;
