some small css changes on homepage

--- a/app/views/gigs/show.html.erb
+++ b/app/views/gigs/show.html.erb
@@ -4,9 +4,9 @@
   <img src="<%= @gig.band_image_url %>" alt="Event Image">
   <div class="confirm-card-content">
     <div class="confirm-card-title">
-      <h1><%= @gig.event_name %></h1>
-      <span><%= @gig.band %><br>
-        nowheres</span>
+      <h1><%= @gig.band %></h1>
+      <h3><%= @gig.event_name %><br>
+        </h3>
     </div>
     <div class="confirm-card-location">
       <i class="fas fa-map-marker-alt"></i>
