genre and date filters both  works

--- a/app/views/gigs/_filter.html.erb
+++ b/app/views/gigs/_filter.html.erb
@@ -20,8 +20,8 @@
     </button>
     <ul class="dropdown-menu scrollable-dropdown">
       <li><a class="dropdown-item" href="?date_range=tonight">Tonight</a></li>
-      <li><a class="dropdown-item" href="?date_range=weekend">This Weekend</a></li>
-      <li><a class="dropdown-item" href="?date_range=month">This Month</a></li>
+      <li><a class="dropdown-item" href="?date_range=this_weekend">This Weekend</a></li>
+      <li><a class="dropdown-item" href="?date_range=this_month">This Month</a></li>
       <li><a class="dropdown-item" href="?date_range=next_month">Next Month</a></li>
     </ul>
   </div>
