Change the background color of the map and color of marks and marks canbe clicked

--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -14,8 +14,12 @@
     height: 90vh; // Full height of the viewport
     overflow: hidden; // Prevent scrolling
   }
-  
+
   .mapbox {
     width: 100%;
     height: 100%;
+  }
+
+  svg {
+    color: #95389E
   }
