--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -1,31 +1,136 @@
 .chatroom {
-  background: white;
-  margin-top: 9px;
-  height: 782px;
+  background: #121212;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   flex-grow: 1;
+  height: 100vh;
+
+
+  .chatroom-info {
+    display: flex;
+    align-items: center;
+    background-color: #2E2E2E;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: #E0E0E0;
+  }
+  
+  .gig-image img {
+    max-width: 100px; 
+    margin-right: 5px; 
+    margin-left: 10px;
+    border-radius: 100px;
+  }
+  
+  .chatroom-details {
+    flex: 1;
+  }
 
   h1 {
-    // border-bottom: 1px solid $gray-200;
     margin-bottom: 0;
-    padding: 1rem;
+    padding-top: 1rem;
+    padding-left: 1rem;
+    font-size: 24px;
+    font-weight: bold;
   }
+
+  .event-time-location {
+    padding-top: 2px;
+    padding-left: 1rem;
+    padding-bottom: 5px;
+  }
+
 
   .messages {
     height: 100%;
     overflow: scroll;
-    padding: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 5rem;
+    padding-left: 5px;
+    padding-right: 5px;
+
   }
 
+  .message {
+    margin-bottom: 1px;
+    display: flex;
+    align-items: center;
+    position: relative; 
+    padding: 3px; 
+
+  }
+
+  .message-info {
+    display: inline-block;
+    margin-right: 10px; 
+    font-size: 10px;
+    color: #A4A6D3;
+  }
+  
+
+
+.text-message {
+  display: inline-block;
+    background: #8E79B9;
+    border-radius: 20px;
+    padding: 10px 15px;
+    font-size: 16px;
+    max-width: 80%;
+    margin-bottom: 15px;
+}
+
   #new_message {
-    border-top: 1px solid $gray-200;
+    //border-top: 1px solid $gray-200;
     padding: 1rem;
 
     .form-group {
       margin-bottom: 0;
     }
   }
+}
+
+/* Align current user's messages to the right */
+.message.current-user {
+  justify-content: flex-end;
+}
+
+// If user is the current user, their messages go to the right
+.message.current-user .message-info {
+  order: 2; 
+  margin-left: 10px;
+  margin-right: 0; 
+}
+
+// If user is the current user only, their colour is a different colour
+.message.current-user .text-message {
+  background: #e1c5e2; /* Different background color for current user's messages */
+  color: #462f42;
+
+}
+
+.message-send-section {
+  position: fixed;
+  bottom: 55px;
+  left: 0;
+  width: 100%;
+  background-color: #2E2E2E;
+  border: none;
+}
+
+.message-send-section input[type="text"] {
+  flex: 1; 
+  width: 100%; 
+  height: 3rem;
+  background-color: #E0E0E0;
+}
+.send-button {
+  background-color: #7f5fff; 
+  color: #E0E0E0;
+  border: none;
+  border-top-right-radius: 30px; 
+  border-bottom-right-radius: 30px; 
+  border-top-left-radius: 0px;
+  border-bottom-left-radius: 0px;
+  height: 48px;
 }
 
