--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -1,17 +1,30 @@
-<div class="container chatroom" data-controller="chatroom-subscription"
+<div class="chatroom" data-controller="chatroom-subscription"
   data-chatroom-subscription-chatroom-id-value="<%= @chatroom.id %>">
-  <h1><i class="fa-solid fa-comment"></i> <%= @chatroom.name %></h1>
-    <p> <%= @chatroom.gig.time.strftime("%a, %b %e %Y")  %>
+  <div class="chatroom-info d-flex">
+    <div class="gig-image">
+      <%= image_tag @chatroom.gig.band_image_url, alt: "Gig Image" %>
+    </div>
+        <div class="chatroom-details">
 
-  <div class="messages" data-chatroom-subscription-target="messages">
-    <% @chatroom.messages.each do |message| %>
-      <%= render "messages/message", message: message %>
-    <% end %>
-  </div>
-  <%= simple_form_for [@chatroom, @message],html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f| %>
-    <%= f.input :content, label: false, placeholder: "Message ##{@chatroom.name}", wrapper_html: {class: "flex-grow-1"} %>
-    <%= f.submit "Send", class: "btn btn-primary mb-3" %>
-  <% end %>
-  <!-- app/views/chatrooms/show.html.erb -->
-  <%= debug @message.errors.full_messages if @message.errors.any? %>
+  <h1><%= @chatroom.name %></h1>
+  <p class="event-time-location"> <%= @chatroom.gig.time.strftime("%a, %b %e %Y")  %>  
+<br><i class="fa-solid fa-location-dot"></i> <%= @chatroom.gig.location.split(',').first %></p>   
+ </div>
+
 </div>
+    <div class="messages" data-chatroom-subscription-target="messages">
+      <% @chatroom.messages.each do |message| %>
+        <%= render "messages/message", message: message %>
+      <% end %>
+    </div>
+    <div class="message-send-section">
+      <%= simple_form_for [@chatroom, @message],html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f| %>
+        <%= f.input :content, label: false, placeholder: "Message #{@chatroom.name}", wrapper_html: {class: "flex-grow-1"} %>
+        <button type="submit" class="btn send-button">
+          <i class="fa-solid fa-paper-plane"></i>
+        </button>
+      <% end %>
+      <!-- app/views/chatrooms/show.html.erb -->
+      <%= debug @message.errors.full_messages if @message.errors.any? %>
+    </div>
+  </div>
