--- a/app/views/gigs/show.html.erb
+++ b/app/views/gigs/show.html.erb
@@ -1,27 +1,26 @@
 <div class="justify-content-center d-flex">
-<div class="container p-3 row justify-content-center mx-0">
-<div class="confirm-card col-12 col-lg-6">
-  <img src="<%= @gig.band_image_url %>" alt="Event Image">
-  <div class="confirm-card-content">
-    <div class="confirm-card-title">
-      <h1><%= @gig.event_name  %></h1>
-      <h2><%= @gig.band %><br>
-        </h2>
-    </div>
-    <div class="confirm-card-location">
-      <i class="fas fa-map-marker-alt"></i>
-      <span><%= @gig.location %></span>
-    </div>
-    <div class="confirm-card-date">
-      <%= @gig.time.strftime("%a, %b %e %Y") %><br>
-      <%= @gig.time.strftime("%I:%M %P") %>
-    </div>
-    <div class="register-button">
-        <%= simple_form_for [@gig, @registration] do |f| %>
-          <%= f.submit "Register", style: 'background-color:#8A68CE; color: white; padding: 10px 10px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; border: none; border-radius: 4px;' %>
-        <% end %>
+  <div class="container p-3 row justify-content-center mx-0">
+    <div class="confirm-card col-12 col-lg-6">
+      <img src="<%= @gig.band_image_url %>" alt="Event Image">
+      <div class="confirm-card-content">
+        <div class="confirm-card-title">
+          <h1><%= @gig.event_name  %></h1>
+          <h2><%= @gig.band %><br>
+          </h2>
+        </div>
+        <div class="confirm-card-location">
+          <i class="fas fa-map-marker-alt"></i>
+          <span><%= @gig.location.split(',').map(&:strip).find { |part| part.match(/\b(Asakusa|Odaiba|Shinjuku|Ginza|Asagaya|Akihabara|Roppongi|Shibuya|Ikebukuro|Sangenjaya)\b/) }&.match(/\b(Asakusa|Odaiba|Shinjuku|Ginza|Asagaya|Akihabara|Roppongi|Shibuya|Ikebukuro|Sangenjaya)\b/)[0] %></span>
+        </div>
+        <div class="confirm-card-date">
+          <%= @gig.time.strftime("%a, %b %e %Y") %><br>
+          <%= @gig.time.strftime("%I:%M %P") %>
+        </div>
+        <div class="register-button">
+          <%= simple_form_for [@gig, @registration] do |f| %>
+            <%= f.submit "Register", style: 'background-color:#8A68CE; color: white; padding: 10px 10px; text-align: center; text-decoration: none; display: inline-block; font-size: 16px; margin: 4px 2px; cursor: pointer; border: none; border-radius: 4px;' %>
+          <% end %>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-</div>
-
