added an alert but it is not finished

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,6 +25,11 @@
 // Mapbox
 @import url("https://api.mapbox.com/mapbox-gl-js/v3.1.2/mapbox-gl.css");
 
+/*
+ *= require sweetalert2
+ */
+
+
 // Holds the positioning for the pop-up card on home page
 .content-wrapper {
   position: absolute;
