update gig filter dropdown style with border-radius

--- a/app/views/gigs/_filter.html.erb
+++ b/app/views/gigs/_filter.html.erb
@@ -1,6 +1,6 @@
 <!--Button-1 recommended-->
-<div class="dropdown custom-dropdown">
-  <%= button_to 'Recommended', root_path(recommend: true), method: :get, class: 'btn btn-secondary custom-dropdown-button' %>
+<div class="dropdown custom-dropdown" style="border-radius: 20px">
+  <%= button_to 'Recommended', root_path(recommend: true), method: :get, class: 'btn btn-secondary custom-dropdown-button'%>
 </div>
 <!--Filter-2 genre-->
 <div class="dropdown">
