modal tweek, sweet alert done and style for sweet alert

--- a/app/assets/stylesheets/components/_confirm_card.scss
+++ b/app/assets/stylesheets/components/_confirm_card.scss
@@ -51,7 +51,7 @@
 }
 .register-button {
     display: inline-block;
-    background-color: #8A68CE;
+    //background-color: #8A68CE;
     color: white;
     padding: 6px 12px;
     border-radius: 20px;
