--- a/app/views/gigs/_gigs.html.erb
+++ b/app/views/gigs/_gigs.html.erb
@@ -19,27 +19,28 @@
   </div>
   <div class="col-3">
     <%#  %>
-    <div>
-    <%= link_to "<i class='fa-solid fa-ticket'></i>".html_safe, confirm_gig_registrations_path(gig), class: 'btn btn-flat' %>
-    <div>
-      <%# TODO: Get the gigs/show page %>
-   <%= link_to "<i class='fa-solid fa-circle-info'></i>".html_safe, gig_path(gig), class: 'btn btn-flat', data: { bs_toggle: "modal", bs_target: "#myModal", action: "click->modal#get_modal" } %>
-
-<div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-  <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalCenterTitle">Modal Title</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body" data-modal-target="modalBody">
-        <!-- Modal content goes here -->
+    <div class="register-button" data-controller="sweetalert">
+      <%= simple_form_for [gig, @registration], html: { data: { action: "submit->sweetalert#confirm" }, turbo: false } do |f| %>
+        <%= f.button :button, class: 'btn btn-flat' do %>
+          <i class="fa-solid fa-ticket"></i>
+        <% end %>
+      <% end %>
+    </div>
+    <%# TODO: Get the gigs/show page %>
+    <%= link_to "<i class='fa-solid fa-circle-info'></i>".html_safe, gig_path(gig), class: 'btn btn-flat', data: { bs_toggle: "modal", bs_target: "#myModal", action: "click->modal#get_modal" } %>
+    <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalCenterTitle">Gig Info</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" data-modal-target="modalBody">
+            <!-- Modal content goes here -->
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
-  </div>
-    </div>
-  </div>
-
+</div>
