Fix the style of the recommended button in homepage

--- a/app/views/gigs/_filter.html.erb
+++ b/app/views/gigs/_filter.html.erb
@@ -1,5 +1,5 @@
-<!--Button-1 recommended-->
-<div class="dropdown custom-dropdown">
+<!--Recommended button-->
+<div class="dropdown">
   <%= button_to 'Recommended', root_path(recommend: true), method: :get, class: 'btn btn-secondary custom-dropdown-button' %>
 </div>
 <!--Filter-2 genre-->
