--- a/app/views/gigs/_gigs.html.erb
+++ b/app/views/gigs/_gigs.html.erb
@@ -1,6 +1,6 @@
 <div class="upcoming-events-card" data-controller="modal" data-modal-id-value=<%= gig.id %>>
   <img src="<%= gig.band_image_url || 'https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg' %>" class="col-4"/>
-  <div class="upcoming-events-card-infos col-4">
+  <div class="upcoming-events-card-infos col-6">
     <div class="pb-2">
       <%#  Turns the time into a Day, Date, Month, Year format %>
       <h3 class="top-heading"><%= gig.time.strftime("%a, %b %e %Y") %>
@@ -17,7 +17,7 @@
       <%= gig.location.split(',').map(&:strip).find { |part| part.match(/\b(Asakusa|Odaiba|Shinjuku|Ginza|Asagaya|Akihabara|Roppongi|Shibuya|Ikebukuro|Sangenjaya)\b/) }&.match(/\b(Asakusa|Odaiba|Shinjuku|Ginza|Asagaya|Akihabara|Roppongi|Shibuya|Ikebukuro|Sangenjaya)\b/)[0] %>
     </div>
   </div>
-  <div class="col-3">
+  <div class="col-2">
     <%#  %>
     <div class="register-button" data-controller="sweetalert">
       <%= simple_form_for [gig, @registration], html: { data: { action: "submit->sweetalert#confirm" }, turbo: false } do |f| %>
@@ -27,7 +27,7 @@
       <% end %>
     </div>
     <%# TODO: Get the gigs/show page %>
-    <%= link_to "<i class='fa-solid fa-circle-info'></i>".html_safe, gig_path(gig), class: 'btn btn-flat', data: { bs_toggle: "modal", bs_target: "#myModal", action: "click->modal#get_modal" } %>
+    <%= link_to "<i class='fa-solid fa-circle-info'></i>".html_safe, gig_path(gig), class: 'btn btn-flat register-button' , data: { bs_toggle: "modal", bs_target: "#myModal", action: "click->modal#get_modal" } %>
     <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
