--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -44,7 +44,7 @@
     <h2 class="mb-3">Recommended for you</h2>
     <% if @devise_mapping.omniauthable? %>
       <%- @resource_class.omniauth_providers.each do |provider| -%>
-        <%= button_to "Sign in with Spotify", user_spotify_omniauth_authorize_path, data: { turbo: false } %>
+        <%= link_to 'Sign in with Spotify', 'https://accounts.spotify.com/authorize?response_type=token&client_id=bb923d05526e4dbb9df9abf081133d6f&scope=user-top-read&redirect_uri=http%253A%252F%252Flocalhost%253A3000%2Fspotify%2Fcallback' %>
       <%- end -%>
     <% end %>
     <br>
