--- a/app/assets/stylesheets/components/_chats.scss
+++ b/app/assets/stylesheets/components/_chats.scss
@@ -85,6 +85,7 @@
   background-size: 24px;
   background-position: center;
   background-repeat: no-repeat;
+  background-color: #7f5fff;
 }
 
 .icon-button.info {
