updated sort button styling, added up arrow for sort in users filter view

--- a/app/views/users/_filter.html.erb
+++ b/app/views/users/_filter.html.erb
@@ -4,5 +4,5 @@
   <a href="?date_range=this_month" class="filter-buttons">This Month</a>
   <br>
   <a href="?date_range=next_month" class="filter-buttons">Next Month</a>
-  <a href="?sort=asc" class="filter-buttons">Sorting</a>
+  <a href="?sort=asc" class="filter-buttons"><i class="fa-solid fa-arrow-up"></i> Sort</a>
 </div>
