--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -12,11 +12,12 @@
     </div>
     <!-- Horizontal scroll container for gigs -->
     <div style="overflow-x: auto; white-space: nowrap; padding-top: 25px; width: 100%;">
-      <div style="display: flex; flex-wrap: nowrap; gap: 100px; padding: 0 15px;">
+      <div style="display: flex;flex-wrap: nowrap; gap: 100px;/* padding: 0 15px; */">
         <% @registered_gigs.each do |registration| %>
           <div class="dashboard-gig-card-container" style="flex: 0 0 auto; width: 300px; margin-right: 15px;">
-            <div class="dashboard-gig-card" style="border: 1px solid #ddd; background-color: #fff; position: relative;">
-              <div class="dashboard-gig-image-section" style="margin-bottom: -12px;margin-top: -22px;margin-left: -13px;">
+            <div class="dashboard-gig-card" style="border: 1px solid #ddd; backgro
+            und-color: #fff; position: relative;">
+              <div class="dashboard-gig-image-section" style="margin-bottom: -17px;margin-top: -22px;margin-left: 0px;">
                 <%= link_to gig_path(registration.gig) do %>
                   <img src="<%= registration.gig.band_image_url || 'https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg' %>" alt="<%= registration.gig.name %>" style="width: 100%; height: auto;"/>
                 <% end %>
@@ -56,14 +57,19 @@
     <br>
   </div>
   <div class="favorite-genres">
-    <h2>🎧 My Favorite Genres </h2>
+    <h2 class="mb-3">🎧 My Favorite Genres </h2>
     <div class="dropdown" style="margin-bottom: 15px;">
       <button class="btn btn-secondary dropdown-toggle custom-dropdown-button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
         Add Genre
       </button>
       <ul class="dropdown-menu scrollable-dropdown">
         <% @genres.each do |genre| %>
-          <li><%= link_to genre, add_genre_user_path(@user, user: {genre: genre.name}), method: :patch, class: 'dropdown-item' %></li>
+          <li>
+            <%= form_with url: add_genre_user_path(@user), method: :patch, local: true do %>
+              <%= hidden_field_tag 'user[genre]', genre.name %>
+              <%= submit_tag genre.name, class: 'dropdown-item' %>
+            <% end %>
+          </li>
         <% end %>
       </ul>
     </div>
@@ -81,7 +87,7 @@
     </div>
   </div>
   <div class="favorite-artists">
-    <h2>🧚 My Favorite Artists </h2>
+    <h2 class="mb-3">🧚 My Favorite Artists </h2>
     <div class="dropdown" style="margin-bottom: 15px;">
       <%= form_with url: add_artist_user_path(@user), method: :patch, local: true do |form| %>
         <div class="form-group d-flex align-items-center">
