add scroll loading for recommended gig images on dashboard

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -49,10 +49,45 @@
   <!-- When logged in, this section fetches gigs by genre and matches it -->
   <div class="recommended-spotify">
     <h2 class="mb-3">❤️ Recommended for you</h2>
+    <!-- 
     <% if @devise_mapping.omniauthable? %>
       <%- @resource_class.omniauth_providers.each do |provider| -%>
         <%= link_to 'Sign in with Spotify', 'https://accounts.spotify.com/authorize?response_type=token&client_id=bb923d05526e4dbb9df9abf081133d6f&scope=user-top-read&redirect_uri=http%253A%252F%252Flocalhost%253A3000%2Fspotify%2Fcallback' %>
       <%- end -%>
+    <% end %> -->
+    <% if @recommended_gigs.any? %>
+      <div style="overflow-x: auto; white-space: nowrap; width: 100%;">
+        <div style="display: flex;flex-wrap: nowrap; gap: 100px;/* padding: 0 15px; */">
+          <% @recommended_gigs.each do |gig| %>
+            <div class="dashboard-gig-card-container" style="flex: 0 0 auto; width: 300px; margin-right: 15px;">
+              <div class="dashboard-gig-card" style="border: 1px solid #ddd; background-color: #fff; position: relative;">
+                <div class="dashboard-gig-image-section" style="margin-bottom: -17px;margin-top: -22px;margin-left: 0px; display: contents;">
+                  <img src="<%= gig.band_image_url || 'https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg' %>" alt="<%= gig.name %>" style="width: 100%; height: auto;"/>
+                  <strong><%= gig.name %></strong><br>
+                  Location: <%= gig.location %><br>
+                  Band: <%= gig.band %><br>
+                  Description: <%= gig.description %><br>
+                  Genres: <%= gig.genre_list.join(', ') %>
+                </div>
+                <div class="dashboard-gig-info-section" style="justify-content: space-between;">
+                  <div>
+                    <p class="dashboard-gig-date-time" style="margin: 0;">
+                      <%= gig.time.strftime("%a, %b %e %Y") %><br>
+                      <%= gig.time.strftime("%I:%M %P") %>
+                    </p>
+                    <h1 class="dashboard-gig-title" style="font-size: 16px; margin: 5px 0; text-wrap: wrap"><%= gig.event_name %>: <%= gig.band %></h1>
+                    <p class="dashboard-gig-location" style="font-size: 14px; color: #555; margin: 5px 0;"><i class="fa-solid fa-location-dot"></i>&nbsp;<%= gig.location.split(',').first %></p>
+                  </div>
+                </div>
+                <%= gig.time.strftime("%a, %b %e %Y") %><br>
+                <%= gig.time.strftime("%I:%M %P") %>
+              </div>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    <% else %>
+      <p><%= @recommended_gigs_message %></p>
     <% end %>
     <br>
   </div>
