--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -16,7 +16,7 @@
   color: white;
   padding: 8px 24px;
   border-radius: 4px;
-  background: #670bff;
+  background: #7f5fff;
   transition: background 0.3s ease;
 }
 
