added already registered notification

--- a/app/assets/stylesheets/components/_chats.scss
+++ b/app/assets/stylesheets/components/_chats.scss
@@ -63,6 +63,8 @@
   flex-direction: column;
   justify-content: space-around;
   padding: 15px;
+  padding-bottom: 0;
+  margin-bottom: 5px;
 }
 
 .scrollable-container {
