--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -5,3 +5,10 @@
     border-top-right-radius: 12px;
     object-fit: cover;
 }
+.modal-body {
+    padding-bottom: 0;
+}
+.already-registered {
+    margin-top: 0;
+    margin-bottom: 5px;
+}
