--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column align-items-center search-bar-container">
+<div class="d-flex flex-column align-items-start search-bar-container">
   <%# Added search bar as a partial here %>
   <%= render 'gigs/search' %>
   <%# Added filter as a partial here %>
