--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -4,27 +4,26 @@
     <div class="gig-image">
       <%= image_tag @chatroom.gig.band_image_url, alt: "Gig Image" %>
     </div>
-        <div class="chatroom-details">
-
-  <h1><%= @chatroom.name %></h1>
-  <p class="event-time-location"> <%= @chatroom.gig.time.strftime("%a, %b %e %Y")  %>  
-<br><i class="fa-solid fa-location-dot"></i> <%= @chatroom.gig.location.split(',').first %></p>   
- </div>
-
-</div>
-    <div class="messages" data-chatroom-subscription-target="messages">
-      <% @chatroom.messages.each do |message| %>
-        <%= render "messages/message", message: message %>
-      <% end %>
-    </div>
-    <div class="message-send-section">
-      <%= simple_form_for [@chatroom, @message],html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f| %>
-        <%= f.input :content, label: false, placeholder: "Message #{@chatroom.name}", wrapper_html: {class: "flex-grow-1"} %>
-        <button type="submit" class="btn send-button">
-          <i class="fa-solid fa-paper-plane"></i>
-        </button>
-      <% end %>
-      <!-- app/views/chatrooms/show.html.erb -->
-      <%= debug @message.errors.full_messages if @message.errors.any? %>
+    <div class="chatroom-details">
+      <h1><%= @chatroom.name %></h1>
+      <p class="event-time-location"> <%= @chatroom.gig.time.strftime("%a, %b %e %Y")  %>
+        <br>
+        <i class="fa-solid fa-location-dot"></i> <%= @chatroom.gig.location_name %></p>
     </div>
   </div>
+  <div class="messages" data-chatroom-subscription-target="messages">
+    <% @chatroom.messages.each do |message| %>
+      <%= render "messages/message", message: message %>
+    <% end %>
+  </div>
+  <div class="message-send-section">
+    <%= simple_form_for [@chatroom, @message],html: { data: { action: "turbo:submit-end->chatroom-subscription#resetForm" }, class: "d-flex" } do |f| %>
+      <%= f.input :content, label: false, placeholder: "Message #{@chatroom.name}", wrapper_html: {class: "flex-grow-1"} %>
+      <button type="submit" class="btn send-button">
+        <i class="fa-solid fa-paper-plane"></i>
+      </button>
+    <% end %>
+    <!-- app/views/chatrooms/show.html.erb -->
+    <%= debug @message.errors.full_messages if @message.errors.any? %>
+  </div>
+</div>
