--- a/app/views/users/_filter.html.erb
+++ b/app/views/users/_filter.html.erb
@@ -1,8 +1,8 @@
 <div class="d-flex">
-  <a href="?date_range=tonight" class="filter-buttons">Tonight</a>
+  <%# <a href="?date_range=tonight" class="filter-buttons">Tonight</a>
   <a href="?date_range=this_weekend" class="filter-buttons">This Weekend</a>
   <a href="?date_range=this_month" class="filter-buttons">This Month</a>
   <br>
-  <a href="?date_range=next_month" class="filter-buttons">Next Month</a>
-  <a href="?sort=asc" class="filter-buttons"><i class="fa-solid fa-arrow-up"></i> Sort</a>
+  <a href="?date_range=next_month" class="filter-buttons">Next Month</a> %>
+  <a href="?sort=asc" class="btn btn-secondary custom-dropdown-button">Sort by date</a>
 </div>
